<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->


<!-- This is a primitive example showing the different types of preferences available. -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/preferences_ui_title" >
        <ListPreference
            android:defaultValue="@string/theme_light_blue"
            android:dialogTitle="@string/preferences_themes_dialog_title"
            android:entries="@array/preferences_themes_entries"
            android:entryValues="@array/preferences_themes_values"
            android:key="preference_theme"
            android:title="@string/preference_theme_title" />
        </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_app_language_title" >
        <ListPreference
            android:defaultValue=""
            android:dialogTitle="@string/preferences_app_language_dialog_title"
            android:entries="@array/preferences_app_language_entries"
            android:entryValues="@array/preferences_app_language_values"
            android:key="preference_app_language"
            android:title="@string/preference_app_language_title" />
        <ListPreference
            android:defaultValue="default"
            android:dialogTitle="@string/preferences_fb_language_dialog_title"
            android:entries="@array/preferences_fb_language_entries"
            android:entryValues="@array/preferences_fb_language_values"
            android:key="preference_fb_language"
            android:title="@string/preference_fb_language_title" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/preference_notifications_title" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="preference_notifications"
            android:summary="@string/preference_notification_summary"
            android:title="@string/preference_notification_title" />
      
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="preference_notifications"
            android:key="preference_notifications_vibrate"
            android:persistent="true"
            android:shouldDisableView="true"
            android:title="@string/preference_notification_vibrate_title" />

        <ListPreference
            android:defaultValue="default"
            android:dependency="preference_notifications"
            android:entries="@array/preferences_notifications_ringtone_labels"
            android:entryValues="@array/preferences_notifications_ringtone_values"
            android:key="preference_notifications_ringtone"
            android:persistent="true"
            android:shouldDisableView="true"
            android:title="@string/preference_notification_ringtone_title" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/preference_performances_title" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="preference_performances_rounded_profile_picture"
            android:persistent="true"
            android:summary="@string/preference_performances_rounded_profile_picture_summary"
            android:title="@string/preference_performances_rounded_profile_picture_title" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/preference_about_title" >
        <PreferenceScreen
            android:key="preference_about"
            android:title="@string/preference_about_title" />
        <PreferenceScreen
            android:persistent="false"
            android:title="@string/preference_credits_title" >
            <PreferenceCategory android:title="@string/preference_credits_apis_title" >
                <Preference
                    android:summary="Square"
                    android:title="Picasso" >
                    <intent
                        android:action="android.intent.action.VIEW"
                        android:data="https://github.com/square/picasso" />
                </Preference>
                <Preference
                    android:summary="The Apache Software Foundation"
                    android:title="Apache Commons Lang" >
                    <intent
                        android:action="android.intent.action.VIEW"
                        android:data="http://commons.apache.org/proper/commons-lang/" />
                </Preference>
                <Preference
                    android:summary="Facebook Inc."
                    android:title="Facebook SDK" >
                    <intent
                        android:action="android.intent.action.VIEW"
                        android:data="https://github.com/facebook/facebook-android-sdk" />
                </Preference>
                <Preference
                    android:summary="Niek Haarman"
                    android:title="ListViewAnimations" >
                    <intent
                        android:action="android.intent.action.VIEW"
                        android:data="https://github.com/nhaarman/ListViewAnimations" />
                </Preference>
                <Preference
                    android:summary="Crashlytics"
                    android:title="Crashlytics" >
                    <intent
                        android:action="android.intent.action.VIEW"
                        android:data="www.crashlytics.com" />
                </Preference>
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/credentials_translators" >
                <Preference
                    android:summary="German"
                    android:title="Jens Baumann" >
                </Preference>
                <Preference
                    android:summary="German"
                    android:title="Marius Schiller" >
                </Preference>
                <Preference
                    android:summary="Italian"
                    android:title="Marco Fullin" >
                </Preference>
                <Preference
                    android:summary="Italian"
                    android:title="Looka Feeorettee" >
                </Preference>
                <Preference
                    android:summary="Turkish"
                    android:title="Hasan Güray Güner" >
                </Preference>
                <Preference
                    android:summary="Dutch"
                    android:title="Kris Winkelmans" >
                </Preference>
                <Preference
                    android:summary="Czech"
                    android:title="Vojtěch Navrátil" >
                </Preference>
                <Preference
                    android:summary="Polish"
                    android:title="Michał Jabłoński" >
                </Preference>
                <Preference
                    android:summary="Polish"
                    android:title="Kamil Zet" >
                </Preference>
                <Preference
                    android:summary="Greek"
                    android:title="Leon Vaggalis" >
                </Preference>
                <Preference
                    android:summary="Romanian"
                    android:title="Baiar Ali" >
                </Preference>
                <Preference
                    android:summary="Portugues (Brazil)"
                    android:title="Bruno Perissotti" >
                </Preference>
                <Preference
                    android:summary="Hungarian"
                    android:title="András Csaba Szűcs" >
                </Preference>
                <Preference
                    android:summary="Hebrew"
                    android:title="Niv Lazarovitch" >
                </Preference>
                <Preference
                    android:summary="Vietnamese"
                    android:title="Tai Nguyen" >
                </Preference>
                <Preference
                    android:summary="Spanish"
                    android:title="Pacho Bernal" >
                </Preference>
                <Preference
                    android:summary="Arabic"
                    android:title="Tareq Rayyan" >
                </Preference>
                <Preference
                    android:summary="Traditional Chinese"
                    android:title="Kuwata Toku" >
                </Preference>
                <Preference
                    android:summary="Danish"
                    android:title="Troels Müller" >
                </Preference>
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/preference_credits_tools_title" >
                <Preference
                    android:summary="Android Asset Studio / Jérôme Van Der Linden"
                    android:title="Android Holo Colors Generator" >
                    <intent
                        android:action="android.intent.action.VIEW"
                        android:data="http://android-holo-colors.com/" />
                </Preference>
                <Preference
                    android:summary="Android Asset Studio / Jeff Gilfelt"
                    android:title="Android Action Bar Style Generator" >
                    <intent
                        android:action="android.intent.action.VIEW"
                        android:data="http://jgilfelt.github.io/android-actionbarstylegenerator/" />
                </Preference>
            </PreferenceCategory>
        </PreferenceScreen>
        <!--<PreferenceScreen
            android:key="preference_buy_pro_version"
            android:title="@string/preference_buy_pro_version_title" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/details?id=com.abewy.klyph.pro" />
        </PreferenceScreen>-->
        <PreferenceScreen
            android:key="preference_changelog"
            android:title="@string/preference_changelog_title" />
    </PreferenceCategory>
</PreferenceScreen>